# lemons

./: .gitignore  CMakeLists.txt
src/: battery.cpp  battery.h  colors.h  cpuusage.cpp  cpuusage.h  datetime.cpp  datetime.h  diskusage.cpp  diskusage.h  i3ipc.cpp  i3ipc.h  launcher.cpp  launcher.h  main.cpp  memory.cpp  memory.h  pipe.cpp  pipe.h  power.cpp  power.h  process.cpp  process.h  render.cpp  render.h  ringbuffer.h  types.h  utils.h  weather.cpp  weather.h  widget.h  widgetregistry.cpp  widgetregistry.h
